--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <li>Smart workout plan</li>
                     <li>At home workouts</li>
                 </ul>
-                <a href="payment.html">
+                <a href="http://localhost:3000/">
                     Join Now
                     <i class='bx bx-right-arrow-alt'></i>
                 </a>
@@ -157,7 +157,7 @@
                     <li>Smart workout plan</li>
                     <li>At home workouts</li>
                 </ul>
-                <a href="payment.html">
+                <a href="http://localhost:3000/">
                     Join Now
                     <i class='bx bx-right-arrow-alt'></i>
                 </a>
@@ -172,7 +172,7 @@
                     <li>At home workouts</li>
                     <li>Personal Training</li>
                 </ul>
-                <a href="payment.html">
+                <a href="http://localhost:3000/">
                     Join Now
                     <i class='bx bx-right-arrow-alt'></i>
                 </a>
